finished responsive layouting

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Untitled</title>
+  <title>Responsive Web</title>
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
-	<div class="nav">
+	<nav class="nav">
 		<ul class="nav-items">
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About Us</a></li>
@@ -16,9 +16,25 @@
 			<li><a href="#">Services</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
-	</div>
+	</nav>
 	
-	
+	<div class="body-container">
+		<img class="header-image" src="http://placehold.it/900x250">
+		
+		<div class="content-block">
+			<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus autem impedit ratione atque suscipit cum id, temporibus nemo quisquam mollitia! Accusamus corrupti ducimus laudantium maiores ullam odio perspiciatis repudiandae eligendi!</p>
+			<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis temporibus nulla mollitia ab doloribus molestias, omnis et! Eaque ea maiores corporis facere consequatur cupiditate nesciunt ad molestias libero, veritatis fugiat!</p>
+		</div>
+		<div class="image-container">
+			<img class="body-image" src="http://placehold.it/200x200">
+			<img class="body-image" src="http://placehold.it/200x200">
+			<img class="body-image" src="http://placehold.it/200x200">
+			<img class="body-image" src="http://placehold.it/200x200">
+		</div>
+		<div class="content-block">
+			<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis temporibus nulla mollitia ab doloribus molestias, omnis et! Eaque ea maiores corporis facere consequatur cupiditate nesciunt ad molestias libero, veritatis fugiat!</p>
+		</div>
 
+	</div>
 </body>
 </html>
